--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,53 @@
-﻿absl-py==2.2.0
+absl-py==2.2.2
 astunparse==1.6.3
-blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.1
-cycler==0.12.1
-dnspython==2.7.0
-filelock==3.18.0
-Flask==3.1.0
-flask-cors==5.0.1
 flatbuffers==25.2.10
-fonttools==4.56.0
-fsspec==2025.3.0
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.71.0
 h5py==3.13.0
 idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
+importlib_metadata==8.6.1
 joblib==1.4.2
-keras==3.9.0
-kiwisolver==1.4.8
+keras==3.9.2
 libclang==18.1.1
-Markdown==3.7
+Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 ml_dtypes==0.5.1
-mpmath==1.3.0
 namex==0.0.8
-networkx==3.4.2
-numpy==2.1.3
+numpy==2.0.2
 opt_einsum==3.4.0
-optree==0.14.1
+optree==0.15.0
 packaging==24.2
 pandas==2.2.3
-pillow==11.1.0
 protobuf==5.29.4
 Pygments==2.19.1
-pyparsing==3.2.2
 python-dateutil==2.9.0.post0
-pytz==2025.1
+pytz==2025.2
 requests==2.32.3
-rich==13.9.4
+rich==14.0.0
 scikit-learn==1.6.1
-scipy==1.15.2
-setuptools==77.0.3
+scipy==1.13.1
 six==1.17.0
-sympy==1.13.1
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
-termcolor==2.5.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.0.1
 threadpoolctl==3.6.0
-typing_extensions==4.12.2
+typing_extensions==4.13.2
 tzdata==2025.2
-urllib3==2.3.0
+urllib3==2.4.0
 Werkzeug==3.1.3
-wheel==0.45.1
 wrapt==1.17.2
-xgboost==3.0.0
-flask
-gunicorn
-scikit-learn
+xgboost==2.1.4
+zipp==3.21.0
 tensorflow
+numpy
 pandas
+scikit-learn
+flask
+flask-cors
